--- a/styles.css
+++ b/styles.css
@@ -3753,14 +3753,31 @@ body {
 [preview] {
   cursor: pointer;
 }
-a:not(.menu) {
+a:not(.menu, .social) {
   text-decoration: none;
   cursor: pointer;
   color: #d0d0d0;
   color: var(--font-color);
   position: relative;
 }
-a:not(.menu)::after {
+a:not(.menu, .social).pdf::after {
+  content: "\f1c1";
+  font: 30px/1 FontAwesome;
+  padding-left: 5px;
+  font-weight: 400;
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+a:not(.menu, .social)[href^="mailto:"]::after {
+  content: "\f0e0";
+  font: 14px/1 FontAwesome;
+  padding-left: 5px;
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+a:not(.menu, .social)::after {
   content: "\f061";
   font: 14px/1 FontAwesome;
   padding-left: 5px;
@@ -3768,7 +3785,7 @@ a:not(.menu)::after {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
 }
-a:not(.menu)::before {
+a:not(.menu, .social)::before {
   content: "";
   position: absolute;
   top: 100%;
@@ -3779,11 +3796,11 @@ a:not(.menu)::before {
   background: linear-gradient(90deg, teal, lightblue);
   background: var(--font-gradient, var(--primary-color));
 }
-a:not(.menu):hover {
+a:not(.menu, .social):hover {
   color: #d0d0d0;
   color: var(--theme-color-white);
 }
-a:not(.menu):hover::before {
+a:not(.menu, .social):hover::before {
   content: "";
   position: absolute;
   top: 100%;
@@ -3793,6 +3810,18 @@ a:not(.menu):hover::before {
   border-radius: 2px;
   background: linear-gradient(90deg, #d0d0d0, lightblue);
   background: var(--font-gradient-highlihgt, var(--primary-color));
+}
+p {
+  margin-bottom: 0;
+}
+.p-md {
+  padding: 20px;
+}
+.p-big {
+  padding: 50px;
+}
+a.social {
+  cursor: pointer;
 }
 a.menu {
   text-decoration: none;
@@ -3842,9 +3871,15 @@ button.filter {
   color: var(--theme-color);
   min-width: 50px;
 }
-button.primary {
+button.click-indicator::after {
+  content: "";
+}
+.bg_primary {
   background-color: teal;
   background-color: var(--primary-color);
+}
+.bg_secondary {
+  background-color: var(--secondary-color);
 }
 .container-fluid {
   padding: 0;
@@ -3891,12 +3926,16 @@ h2 {
 .text-center {
   text-align: center;
 }
+.relative-container {
+  position: relative;
+}
 .center-container {
   display: flex;
   justify-content: center;
 }
-.relative-container {
-  position: relative;
+.center-container * {
+  flex: 1;
+  text-align: center;
 }
 .line-container {
   display: flex;
@@ -3952,6 +3991,27 @@ div.puffer {
   min-height: 100vH;
   border: 1px solid rgba(68, 68, 68, 0.5607843137);
   height: auto;
+}
+.textbox {
+  background-color: var(--secondary-color);
+  color: white;
+  padding: 10px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.textbox .textbox.rotate {
+  transform: rotate(-1deg);
+}
+.textbox.rotate2 {
+  transform: rotate(1deg);
+}
+.primary {
+  background-color: teal;
+  background-color: var(--primary-color);
+}
+.secondary {
+  background-color: var(--secondary-color);
 }
 
 /*# sourceMappingURL=styles.css.map*/
