--- a/styles.css
+++ b/styles.css
@@ -3331,6 +3331,10 @@ textarea.form-control-lg{min-height:calc(1.5em + 1rem + 2px)}
 .modal-header {
   padding: 5px;
 }
+.row {
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
+}
 :root {
   --primary-color: teal;
   --main-light: #799c9c;
