--- a/styles.css
+++ b/styles.css
@@ -3984,6 +3984,9 @@ div.puffer {
   width: 70%;
   margin: auto;
 }
+.flex-row {
+  flex-direction: row;
+}
 .fw-panel {
   margin: 10vH 0;
   display: flex;
